<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WindHunter</string>
    <string name="login_title">登录</string>
    <string name="login_email">请输入邮箱</string>
    <string name="login_password">请输入密码</string>
    <string name="login_submit">登录</string>
    <string name="login_alert_emptyerror">请输入邮箱或密码～</string>
    <string name="login_alert_neterror">对不起，网络连接错误～</string>
    <string name="login_alert_autherror">登录失败，帐号或密码错误～</string>
    <string name="main_image_weibo">微博</string>
    <string name="main_image_homepage">主页</string>
    <string name="main_image_friends">好友</string>
    <string name="main_image_chat">聊天</string>
    <string name="main_image_findfriends">找朋友</string>
    <string name="main_image_messages">消息</string>
    <string name="main_image_sign">签到</string>
    <string name="main_iamge_settings">设置</string>
    <string name="main_image_help">帮助</string>
</resources>