<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:baselineAligned="false"
        >
    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/login_logo"
                />
    </LinearLayout>
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/login_email"
            bootstrapbutton:be_roundedCorners="true"
            bootstrapbutton:be_state="default"
            android:gravity="left|center"
            android:singleLine="true"
            />
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/login_password"
            android:password="true"
            bootstrapbutton:be_roundedCorners="true"
            bootstrapbutton:be_state="default"
            android:gravity="left|center"
            android:singleLine="true"
            />
    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login_submit"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_type="primary"
            bootstrapbutton:bb_text_gravity="center" />

    <LinearLayout
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/remember_password"
            android:text="记住密码"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/login_register"
                android:text="注册新用户"
                android:textSize="16sp"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:textColor="@color/bbutton_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>